--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <!-- about------------------------------------------------------------------------ -->
-<section class="aboutMe">
+<section id="aboutMe" class="aboutMe">
     <div class="aboutMeContainer">
         <div id="imgAbout">
             <img data-aos="fade-up" data-aos-duration="1500" id="imgAbout1" src="../assets/media/about.jpg" alt="About">
