--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,15 +107,57 @@ $customBlue: #00ADB5;
   transition: all 400ms;
 }
 /*Header-----------------------------------------------------------------------------*/
+
+/*efect Particles*/
+/*
+canvas{
+  background: black;
+  width: 100vw;
+  height: 100vh;
+}
+#copy{
+  width: 250px;
+  height: 40px;
+  line-height: 40px;
+  position: absolute;
+  bottom: 35px;
+  left: calc(50% - 125px);
+  background: none;
+  color: white;
+  font-size: 30px;
+  font-family: arial;
+  text-align: center;
+  border: 1px solid white;
+
+}
+
+p{
+position: fixed;
+left: 0;
+bottom:5px;
+color: #fff;
+z-index:10;
+font-size:16px;
+font-family: Helvetica, Verdana, sans-serif;
+opacity:0.5;
+width: 100%;
+text-align: center;
+margin: 0;
+}*/
+
+/*-------------------------------------------------*/
+
+
 header {
   width: 100%;
   height: 1000px;
   display: flex;
-  background-color: $backgroundColorGlobalPrimary;
+  background-color: $backgroundColorDarkSecundary;
+  //background-image: url("./assets/media/bgMountans.jpg");
 }
 #squareTitle {
   margin: auto;
-  border: 5px solid $TextColorGlobalPrimary;
+  border: 5px solid $backgroundColorGlobalSecundary;
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -123,7 +165,7 @@ header {
 #title {
   font-family: $titleFont;
   font-weight: 500;
-  color: $TextColorGlobalPrimary;
+  color: $backgroundColorGlobalSecundary;
   font-size: 80px;
   text-align: center;
   line-height: 1em;
@@ -155,6 +197,7 @@ header {
 .scrollDown fa-icon{
   font-size: 1.3rem;
   text-align: center;
+  color: $customBlue;
 }
 
 @keyframes subTitle {
@@ -185,6 +228,7 @@ header {
   top: 400px;
   left: 0;
   border-right: 1px solid $TextColorGlobalSecundary;
+  border-bottom: 1px solid $TextColorGlobalSecundary;
 }
 
 #night {
@@ -225,8 +269,8 @@ nav {
   justify-content: center;
   height: 70px;
   width: 100%;
-  border-bottom: 1px solid $backgroundColorGlobalPrimary;
-  background-color: $backgroundColorGlobalSecundary;
+  border-bottom: 1px solid $TextColorGlobalSecundary;
+  background-color: $backgroundColorDarkSecundary;
   position: fixed;
   transition-property: top;
   transition-duration: 500ms;
@@ -248,7 +292,7 @@ nav li {
 }
 nav a {
   text-decoration: none;
-  color: $TextColorGlobalPrimary;
+  color: $TextColorGlobalSecundary;
   font-size: 15px;
   padding: 5px;
   border: 2px solid transparent;
@@ -256,7 +300,7 @@ nav a {
 }
 nav a:hover,
 .actived {
-  border: 2px solid $TextColorGlobalPrimary;
+  border: 2px solid $customBlue;
 }
 /*****************************************Footer******************************/
 footer {
@@ -300,7 +344,7 @@ footer {
   width: 50%;
   height: auto;
   margin: 15px;
-  border: 5px solid $TextColorGlobalPrimary;
+  //border: 5px solid $TextColorGlobalPrimary;
   //box-shadow: 5px 5px 50px rgba(0, 0, 0, .20);
 }
 #imgAbout2 {
@@ -882,12 +926,17 @@ form input[disabled] {
     margin: 500px 60px 0 60px;
     justify-content: end;
    }
-
+  nav{
+    height: 50px;
+  }
    nav ul {
     width: 70%;
   }
   nav ul #homeBtnMenu {
     margin-right: 55%;
+  }
+  nav li{
+    margin: 15px;
   }
 
   
@@ -895,7 +944,7 @@ form input[disabled] {
     background-size: cover;
   }
   #createProject{
-    height: 680px;
+    height: 730px;
   }
   
   .squreTextPorfolio {
