--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -42,11 +42,10 @@
 <footer>
     <div class="footerTextContainer">
         <div class="footerText">
-            Let's talk
             Wanna get in touch or talk about a project?</div>
         <div class="footerText">
             Feel free to drop a line in the form at the
-            contact page.
+            <a [routerLink]="['/contact']" fragment="createProject" class="linkBGdark">contact page</a>.
         </div>
     </div>
 </footer>
