--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -11,11 +11,13 @@
                 Who's this guy
             </h3>
             <span class="descriptionAbout">
-                My concept is never stop to learn that's why I've got a personal interest for continuous learning and
-                self
-                improvement.
-                I love to play the guitar in my free time, and I also really like to travel around the world and connect
-                with many people.
+                I’m a Web Developer located in Los Ángeles CA.<br> My concept is never stop to learn that's why I've got
+                a
+                personal interest for continuous learning and
+                self improvement.<br>
+                I love to play the guitar in my free time, play videogames and I also really like to travel around the
+                world and connect
+                with many positive people.
             </span>
         </div>
     </div>
@@ -218,17 +220,27 @@
     </div>
     <div class="containerForm">
         <h3 class="titles" data-aos="fade-left" data-aos-duration="2000">My background</h3>
-        <span class="descriptionAbout paddingRight200" data-aos="fade-left" data-aos-duration="2000">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro velit nemo quia nulla deserunt similique
-            eligendi hic. Qui, et nisi obcaecati numquam, modi consequuntur eos doloribus, minus beatae ipsam facilis!
+        <span class="descriptionAbout" data-aos="fade-left" data-aos-duration="2000">
+            I enjoy creating things that live on the internet. My interest in web development started back a long time
+            ago when
+            I was completing my professional career in graphic design.
         </span>
-        <span class="descriptionAbout marginTop50" data-aos="fade-left" data-aos-duration="2000">CFGS Web Applications
-            Development</span>
-        <span class="descriptionAbout" data-aos="fade-left" data-aos-duration="2000">IFP (Barcelona, Spain.
-            2020-2022)</span>
-        <span class="descriptionAbout marginTop50" data-aos="fade-left" data-aos-duration="2000">Bachelor's Degree in
-            Graphic Design</span>
-        <span class="descriptionAbout" data-aos="fade-left" data-aos-duration="2000">UES (El Salvador, 2006-2013)</span>
+        <span class="descriptionAbout  marginTop50" data-aos="fade-left" data-aos-duration="2000">
+
+            I'm lucky to have worked with amazing people in Europe
+            for important and ambitious global companies where I learned a lot.
+            My main focus these days is building accessible, inclusive products and digital experiences for a variety of
+            clients.
+        </span>
+        <span class="descriptionAbout  marginTop50" data-aos="fade-left" data-aos-duration="2000">
+            You can check out the whole
+            list of degrees, courses, soft
+            and hard skills in my
+            <a href="https://github.com/alejoalonzo" target="_blank" rel="noopener noreferrer" class="linkBGwhite">
+                linkedin
+            </a> profile.
+        </span>
+
     </div>
 </div>
 
