--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -5,7 +5,7 @@
         </h2>
         <span>
             A small gallery of recent projects chosen by me. I've done them all together with amazing people from
-            companies around the globe. It's only a drop in the ocean compared to the entire list.
+            companies around the globe.
         </span>
     </div>
 </div>
