--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,6 +77,15 @@
   <div class="hide">
     <fa-icon [icon]="faBars"></fa-icon>
   </div>
+  <!-- <div #hide class="hide" (clik)="toggleShow()">
+    <fa-icon [icon]="faBars"></fa-icon>
+  </div> -->
+  <!-- <button class="hide" (click)="toggleShow()" type="checkbox">
+    <fa-icon [icon]="faBars"></fa-icon>
+  </button>
+  <div *ngIf="isShown" class="row container-fluid" id="divshow">
+    divContente
+  </div> -->
 </nav>
 <!-- class="animate__animated animate__flipInX" -->
 <!-- <fa-icon [icon]="faCoffee"></fa-icon> -->
