added USA number

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,13 +34,13 @@
 
 <!-- sideBars ------------------------------------------------------------------------>
 <div id="switchColor">
-  <a href="https://api.whatsapp.com/send?phone=34666008083&text=Hello!&nbsp;Can&nbsp;you&nbsp;help&nbsp;me?"
+  <a href="https://api.whatsapp.com/send?phone=16262436274&text=Hello!&nbsp;Can&nbsp;you&nbsp;help&nbsp;me?"
     target="_blank" rel="noopener noreferrer">
     <div id="day" class="boxSideBars">
       <fa-icon [icon]="faWhatsapp" class="socialIcons"></fa-icon>
     </div>
   </a>
-  <a href="mailto:alejandro.12w@hotmail.com" target="_blank" rel="noopener noreferrer">
+  <a href="mailto:info@alejandroalonzo.com" target="_blank" rel="noopener noreferrer">
     <div id="night" class="boxSideBars">
       <fa-icon [icon]="faMailBulk" class="socialIcons"></fa-icon>
     </div>
