--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -13,11 +13,11 @@
             </div>
             <div class="info">
                 <h3 class="title">I'm here!</h3>
-                <span class="resumen">Feel free to drop a line in the form or call me to <a href="tel:+34666008083">+34
-                        666 00 80 83</a> and if you prefer
+                <span class="resumen">Feel free to drop a line in the form or call me to <a href="tel:+16262436274">+1
+                        (626) 243 6274</a> and if you prefer
                     also can get
-                    in touch with me through <a href="mailto:alejandro.12w@hotmail.com"
-                        target="_blank">alejandro.12w@hotmail.com</a></span>
+                    in touch with me through <a href="mailto:info@alejandroalonzo.com"
+                        target="_blank">info@alejandroalonzo.com</a></span>
                 <span class="adress">660 N San Fernando RD, LOS ANGELES, CALIFORNIA 90065 </span>
                 <div class="containerBtn">
                     <a href="https://goo.gl/maps/JxnfjFpTL3JMupHq9" target="_blank" rel="noopener noreferrer">
