details production fixed responsive

--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -27,7 +27,7 @@
                 </a>
 
             </div>
-            <div class="bottonsProjecrtsDetail" *ngIf="confirm == false">
+            <div class="bottonsProjecrtsDetail displayNone" *ngIf="confirm == false">
                 <a [routerLink]="['/edit', project._id]"><button>
                         Set project
                     </button></a>
