--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<!-- UPGRADE 2.0 -->
 <!-- about------------------------------------------------------------------------ -->
 <section class="aboutMe">
     <div class="aboutMeContainer">
@@ -12,7 +13,8 @@
                 Who's this guy
             </h3>
             <span class="descriptionAbout">
-                I’m a Web Developer located in Los Ángeles CA.<br> My concept is never stop to learn that's why I've got
+                I’m a Web Developer located in Los Ángeles CA. in the US<br> My concept is never stop to learn that's
+                why I've got
                 a
                 personal interest for continuous learning and
                 self improvement.<br>
