--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
-<!-- UPGRADE 2.0 -->
+<!-- HEEADER------------------------------------------------------------------------ -->
+<app-particle-animation></app-particle-animation>
 <!-- about------------------------------------------------------------------------ -->
 <section class="aboutMe">
     <div class="aboutMeContainer">
